archive/kubernetes/apps/default/actual/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  labels:
    app.kubernetes.io/part-of: actual
    app.kubernetes.io/name: actual
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: actual
    app.kubernetes.io/name: actual
  ports:
    - protocol: TCP
      port: 5006
      targetPort: http
      name: http
